2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/window.ccg:
	* gdk/src/window.hg: Added unset_back_pixmap().
	* gdk/src/gdk_docs_override.xml: Changed the back_pixmap() documentation 
	to not mention NULL, and to refer to unset_back_pixmap().
	This fixes bug #525967 (Jonathon Jongsma).

2008-04-11  Andreas Klaedtke  <andreas.klaedtke@gmx.net>

	* gtk/src/widget.hg: get_direction(): Add a const version and deprecate 
	the non-const version.
	Bug #526742.

2008-04-11  Armin Burgmeier  <armin@openismus.com>

	* gtk/src/recentinfo.ccg:
	* gtk/src/recentinfo.hg: Added a specialization for
	Glib::Value<Glib::RefPtr<Gtk::RecentInfo> > so that
	Glib::RefPtr<Gtk::RecentInfo> can be used with Glib::Value<> and
	Gtk::TreeModelColumn<>.

2.13.0:

2008-03-14  Murray Cumming  <murrayc@murrayc.com>

	* pango/src/attributes.hg: _MEMBER_SET for end_index and start_index:
	Mention that the indices are in bytes, as now mentioned in the C 
	documentation.
	Bug #517874 (Steve Splonskowski)

2008-03-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* Makefile.am: updated the 'release' target to give a little bit more helpful
	error messages

2008-02-29  Jonathon Jongsma  <jjongsma@gnome.org>

	* Makefile.am: add a 'release' target to the makefile.  This target will do
	a distcheck, and if successful it will tag the repository with the current
	release number and upload the tarball to master.gnome.org

2008-02-24  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* docs/reference/Makefile.am:
	* docs/reference/images/Makefile.am:
	* docs/reference/images/widgets/Makefile.am: Added Makefile.am files 
	to dist the contents of these new directories, to fix distcheck.

2008-02-21  Deng Xiyue <manphiz@gmail.com>

	* examples/book/box/main.cc
	* examples/book/custom/custom_widget/mywidget.cc
	* examples/book/drawingarea/arcs/myarea.cc
	* examples/book/drawingarea/clock/clock.cc
	* examples/book/treeview/editable_cells/examplewindow.cc
	* examples/gdk/radar.cc: