@@ -501,6 +501,107 @@ idicates a class, so this one will be stripped not the actual first parameter
 </parameters>
 </function>
 
+<function name="gdk_pixbuf_animation_iter_get_delay_time">
+<description>
+Gets the number of milliseconds the current pixbuf should be displayed,
+or -1 if the current pixbuf should be displayed forever. Glib::signal_timeout.connect()
+conveniently takes a timeout in milliseconds, so you can use a timeout
+to schedule the next update.
+
+@newin2p14
+</description>
+<parameters>
+<parameter name="iter">
+<parameter_description> an animation iterator
+</parameter_description>
+</parameter>
+</parameters>
+<return> delay time in milliseconds (thousandths of a second)
+</return>
+</function>
+
+<function name="gdk_pixbuf_animation_iter_get_pixbuf">
+<description>
+Gets the current pixbuf which should be displayed; the pixbuf will
+be the same size as the animation itself
+(Gdk::Pixbuf::get_width(), Gdk::Pixbuf:get_height()). 
+This pixbuf should be displayed for get_delay_time() milliseconds. 
+The returned pixbuf will become invalid when the iterator advances
+to the next frame, which may happen anytime you call
+gdk_pixbuf_animation_iter_advance(). Copy the pixbuf to keep it, with 
+Gdk::Pixbuf::copy() as it may get recycled as you advance the iterator.
+
+@newin2p14
+</description>
+<parameters>
+<parameter name="iter">
+<parameter_description> an animation iterator
+</parameter_description>
+</parameter>
+</parameters>
+<return> the pixbuf to be displayed
+</return>
+</function>
+
+<function name="gdk_pixbuf_animation_iter_on_currently_loading_frame">
+<description>
+Used to determine how to respond to the area_updated signal on
+Gdk::PixbufLoader when loading an animation. The area_updated signal is emitted
+for an area of the frame currently streaming in to the loader. So if
+you&apos;re on the currently loading frame, you need to redraw the screen for
+the updated area.
+
+@newin2p14
+</description>
+<parameters>
+<parameter name="iter">
+<parameter_description> a #GdkPixbufAnimationIter
+</parameter_description>
+</parameter>
+</parameters>
+<return> %TRUE if the frame we&apos;re on is partially loaded, or the last frame
+</return>
+</function>
+
+<function name="gdk_pixbuf_animation_iter_advance">
+<description>
+Possibly advances an animation to a new frame. Chooses the frame based
+on the start time passed to Gdk::PixbufAnimation::get_iter().
+
+@current_time would normally come from g_get_current_time(), and
+must be greater than or equal to the time passed to
+Gdk::PixbufAnimation::get_iter(), and must increase or remain
+unchanged each time get_pixbuf() is
+called. That is, you can&apos;t go backward in time; animations only
+play forward.
+
+If using the method overload that takes no current_time parameter then the 
+current time will be used. So you only need to explicitly pass
+@current_time if you&apos;re doing something odd like playing the animation
+at double speed.
+
+If this function returns %FALSE, there&apos;s no need to update the animation
+display, assuming the display had been rendered prior to advancing;
+if %TRUE, you need to call get_pixbuf() and update the
+display with the new pixbuf.
+
+@newin2p14
+</description>
+<parameters>
+<parameter name="iter">
+<parameter_description> a #GdkPixbufAnimationIter
+</parameter_description>
+</parameter>
+<parameter name="current_time">
+<parameter_description> current time
+</parameter_description>
+</parameter>
+</parameters>
+<return> %TRUE if the image may need updating
+
+</return>
+</function>
+
 <function name="gdk_window_set_cursor">
 <description>
 Sets the mouse pointer for a #GdkWindow. 
