@@ -1,5 +1,5 @@
 // -*- c++ -*-
-/* $Id$ */
+/* $Id: pixbufanimation.ccg,v 1.1 2003/01/21 13:38:36 murrayc Exp $ */
 
 /*
  *
@@ -29,6 +29,7 @@ Glib::RefPtr<PixbufAnimation> PixbufAnimation::create_from_file(const Glib::ustr
 {
   GError* pError = 0;
   return Glib::wrap(gdk_pixbuf_animation_new_from_file(filename.c_str(), &pError));
+  //TODO: Handle the error (don't just leak it).
 }
 
 } //Gdk
