@@ -1,5 +1,5 @@
 // -*- c++ -*-
-/* $Id$ */
+/* $Id: pixbufanimationiter.ccg,v 1.1 2003/01/21 13:38:37 murrayc Exp $ */
 
 /*
  *
@@ -19,5 +19,15 @@
  * License along with this library; if not, write to the Free
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
+
+namespace Gdk
+{
+
+bool PixbufAnimationIter::advance()
+{
+  return gdk_pixbuf_animation_iter_advance(gobj(), NULL);
+}
+
+} //namespace Gdk
 
 
