@@ -1,4 +1,4 @@
-/* $Id$ */
+/* $Id: pixbufanimationiter.hg,v 1.2 2004/04/12 11:04:05 murrayc Exp $ */
 
 /* pixbufanimationiter.h
  *
@@ -20,6 +20,7 @@
  */
 
 #include <glibmm/object.h>
+#include <gdkmm/pixbuf.h>
 #include <gdk-pixbuf/gdk-pixbuf.h>
 
 _DEFS(gdkmm,gdk)
@@ -29,12 +30,36 @@ _PINCLUDE(glibmm/private/object_p.h)
 namespace Gdk
 {
 
+
+//TODO: Documentation:
 class PixbufAnimationIter : public Glib::Object
 {
   _CLASS_GOBJECT(PixbufAnimationIter, GdkPixbufAnimationIter, GDK_PIXBUF_ANIMATION_ITER, Glib::Object, GObject)
 protected:
 
+  _WRAP_METHOD(int get_delay_time() const, gdk_pixbuf_animation_iter_get_delay_time)
 
+  _WRAP_METHOD(Glib::RefPtr<Gdk::Pixbuf> get_pixbuf(), gdk_pixbuf_animation_iter_get_pixbuf, refreturn)
+  _WRAP_METHOD(Glib::RefPtr<const Gdk::Pixbuf> get_pixbuf() const, gdk_pixbuf_animation_iter_get_pixbuf, refreturn, constversion)
+
+  _WRAP_METHOD(bool on_currently_loading_frame() const, gdk_pixbuf_animation_iter_on_currently_loading_frame)
+
+#m4 _CONVERSION(`const Glib::TimeVal&', `const GTimeVal*', static_cast<$2>(&$3))
+  _WRAP_METHOD(bool advance(const Glib::TimeVal& current_time), gdk_pixbuf_animation_iter_advance)
+  
+  /** Possibly advances an animation to a new frame. Chooses the frame based
+   * on the start time passed to Gdk::PixbufAnimation::get_iter().
+   * 
+   * If this function returns false, there's no need to update the animation
+   * display, assuming the display had been rendered prior to advancing;
+   * if true, you need to call get_pixbuf() and update the
+   * display with the new pixbuf.
+   *
+   * @newin2p14
+   *
+   * @return true if the image may need updating.
+   */
+  bool advance();
 };
 
 } /* namespace Gdk */
