@@ -141,6 +141,7 @@ public:
    * the display.
    *
    * @see set_back_pixmap().
+   * @newin2p14
    */
   void unset_back_pixmap();
 
