@@ -1,5 +1,13 @@
 2008-04-29  Murray Cumming  <murrayc@murrayc.com>
 
+	* gdk/src/pixbufanimationiter.[hg|cc]: Added  get_pixbuf(), get_delay_time(), 
+	advance(), on_currently_loading_frame().
+	* gdk/src/gdk_docs_override.xml: Customized the documentation for these 
+	methods, to avoid C-specific advice, and to add @newin2p14.
+	Bug #528037 (Balazs Tirpak) 
+
+2008-04-29  Murray Cumming  <murrayc@murrayc.com>
+
 	* gdk/src/window.ccg:
 	* gdk/src/window.hg: Added unset_back_pixmap().
 	* gdk/src/gdk_docs_override.xml: Changed the back_pixmap() documentation 
